[package]
name = "sos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sel4 = { git = "https://gitlab.com/coliasgroup/rust-seL4" }
sel4-root-task-runtime = { git = "https://gitlab.com/coliasgroup/rust-seL4" }
